[gd_scene load_steps=57 format=1]

[ext_resource path="res://Jellyfish.gd" type="Script" id=1]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0000.png" type="Texture" id=2]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0001.png" type="Texture" id=3]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0002.png" type="Texture" id=4]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0003.png" type="Texture" id=5]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0004.png" type="Texture" id=6]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_idle_0005.png" type="Texture" id=7]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0000.png" type="Texture" id=8]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0001.png" type="Texture" id=9]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0002.png" type="Texture" id=10]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0003.png" type="Texture" id=11]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0004.png" type="Texture" id=12]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0005.png" type="Texture" id=13]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0006.png" type="Texture" id=14]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_happy_0007.png" type="Texture" id=15]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_hit_0000.png" type="Texture" id=16]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_hit_0001.png" type="Texture" id=17]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_hit_0002.png" type="Texture" id=18]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_hit_0003.png" type="Texture" id=19]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0000.png" type="Texture" id=20]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0001.png" type="Texture" id=21]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0002.png" type="Texture" id=22]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0003.png" type="Texture" id=23]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0004.png" type="Texture" id=24]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0005.png" type="Texture" id=25]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0006.png" type="Texture" id=26]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_big_happy_0007.png" type="Texture" id=27]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0000.png" type="Texture" id=28]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0001.png" type="Texture" id=29]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0002.png" type="Texture" id=30]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0003.png" type="Texture" id=31]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0004.png" type="Texture" id=32]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_idle_0005.png" type="Texture" id=33]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_hit_0000.png" type="Texture" id=34]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_hit_0001.png" type="Texture" id=35]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_hit_0002.png" type="Texture" id=36]
[ext_resource path="res://graphics/animations/jellyfish/jellyfish_small_hit_0003.png" type="Texture" id=37]
[ext_resource path="res://graphics/fx/fx_success.png" type="Texture" id=38]
[ext_resource path="res://graphics/fx/fx_miss_b.png" type="Texture" id=39]
[ext_resource path="res://graphics/fx/fx_miss_a.png" type="Texture" id=40]
[ext_resource path="res://fonts/calibri.ttf" type="DynamicFontData" id=41]
[ext_resource path="res://graphics/fx/fx_star.png" type="Texture" id=42]
[ext_resource path="res://audio/sfx/jellyfish_bubble_random_01.wav" type="Sample" id=43]
[ext_resource path="res://audio/sfx/jellyfish_bubble_random_02.wav" type="Sample" id=44]
[ext_resource path="res://audio/sfx/jellyfish_bubble_random_03.wav" type="Sample" id=45]
[ext_resource path="res://audio/sfx/jellyfish_bubble_random_04.wav" type="Sample" id=46]
[ext_resource path="res://audio/sfx/jellyfish_bubble_random_05.wav" type="Sample" id=47]
[ext_resource path="res://finished_signal.gd" type="Script" id=48]
[ext_resource path="res://audio/phonemes/phoneme_o.wav" type="Sample" id=49]
[ext_resource path="res://success_fx.tres" type="Animation" id=50]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ], "loop":true, "name":"b_default", "speed":5.0 }, { "frames":[ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ], "loop":true, "name":"r_happy", "speed":5.0 }, { "frames":[ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ], "loop":true, "name":"b_selected", "speed":5.0 }, { "frames":[ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ], "loop":true, "name":"b_happy", "speed":5.0 }, { "frames":[ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ], "loop":true, "name":"r_default", "speed":5.0 }, { "frames":[ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ], "loop":true, "name":"r_selected", "speed":5.0 } ]

[sub_resource type="DynamicFont" id=2]

font/size = 90
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 41 )

[sub_resource type="SampleLibrary" id=3]

samples/jellyfish_bubble_random_01 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 43 ) }
samples/jellyfish_bubble_random_02 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 44 ) }
samples/jellyfish_bubble_random_03 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 45 ) }
samples/jellyfish_bubble_random_04 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 46 ) }
samples/jellyfish_bubble_random_05 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 47 ) }

[sub_resource type="SampleLibrary" id=4]

samples/phoneme_o = { "db":0.0, "pitch":1.0, "sample":ExtResource( 49 ) }

[sub_resource type="Animation" id=5]

length = 20.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 20 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 70, 1000 ), Vector2( 70, -200 ) ] }

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/jelly_anim/fx_fail:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 0.5, 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/jelly_anim/fx_fail2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1, 0.2, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 0.5, 1.0, 0.0 ] }

[node name="Jelly_control" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = -20.0
margin/right = 20.0
margin/bottom = 20.0
script/script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 70, -200 )

[node name="jelly_anim" type="AnimatedSprite" parent="Position2D"]

process/pause_mode = 2
transform/pos = Vector2( 2.39999, 82.4 )
transform/scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "r_default"
frame = 5
playing = true

[node name="jelly_button" type="Button" parent="Position2D/jelly_anim"]

process/pause_mode = 1
visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 387.0
margin/top = 437.0
margin/right = 107.0
margin/bottom = 97.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="fx_success" type="Sprite" parent="Position2D/jelly_anim"]

visibility/opacity = 0.0
transform/pos = Vector2( -150, -175 )
transform/scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 38 )
centered = false

[node name="fx_fail" type="Sprite" parent="Position2D/jelly_anim"]

visibility/opacity = 0.0
transform/pos = Vector2( -150, -175 )
transform/scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 39 )
centered = false

[node name="fx_fail2" type="Sprite" parent="Position2D/jelly_anim"]

visibility/opacity = 0.0
transform/pos = Vector2( -156, -181 )
transform/scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 40 )
centered = false

[node name="phonetic_label" type="Label" parent="Position2D/jelly_anim"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -50.0
margin/top = -125.0
margin/right = 50.0
margin/bottom = -35.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ParticlesLeft" type="Particles2D" parent="Position2D/jelly_anim"]

visibility/opacity = 0.5
transform/pos = Vector2( -12, 13 )
transform/rot = -20.0
transform/scale = Vector2( 0.6, 0.6 )
config/amount = 4
config/lifetime = 5.0
config/time_scale = 5.0
config/emitting = false
config/texture = ExtResource( 42 )
params/direction = 1.0
params/spread = 30.0
params/linear_velocity = 20.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.12
randomness/initial_size = 0.3
randomness/final_size = 0.6

[node name="ParticlesRight" type="Particles2D" parent="Position2D/jelly_anim"]

visibility/opacity = 0.5
transform/pos = Vector2( -12, 13 )
transform/rot = 20.0
transform/scale = Vector2( 0.6, 0.6 )
config/amount = 4
config/lifetime = 5.0
config/time_scale = 5.0
config/emitting = false
config/texture = ExtResource( 42 )
params/direction = 1.0
params/spread = 30.0
params/linear_velocity = 20.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.12
randomness/initial_size = 0.3
randomness/final_size = 0.6

[node name="bubblePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = ExtResource( 48 )

[node name="PhoneticPlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = -4.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="animator" type="AnimationPlayer" parent="."]

process/pause_mode = 1
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/jelly_anim = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "jelly_anim"

[node name="animator_fx" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fail_fx = SubResource( 6 )
anims/success_fx = ExtResource( 50 )
next/fail_fx = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Position2D/jelly_anim/jelly_button" to="." method="_on_jelly_button_pressed"]


